fix(ui): fixed extra margin top for todo header #fix4

--- a/todo-app-main/style.css
+++ b/todo-app-main/style.css
@@ -89,6 +89,11 @@ button > img {
 	margin-top: 3.75rem;
 	justify-content: space-between;
 }
+@media only screen and (max-width:700px) {
+	.todo-header {
+		margin-top: 1.75rem;
+	}
+}
 .todo-header > h1 {
 	text-transform: uppercase;
 	font-weight: 700;
